Separate CAB module from CamConfig into its own cabModuleConfiguration bean
CAB (Capital Asset Builder) is a distinct module with namespace KFS-CAB,
its own packagePrefixes, jobNames, triggerNames, and DWR config.
Previously it was incorrectly merged into the CAM module configuration.

Now CamConfig defines both:
- camModuleConfiguration (KFS-CAM)
- cabModuleConfiguration (KFS-CAB)

Each with its own proper DD packages, OJB files, and DWR config.